# vizdown-mcp

./: .gitignore  README.md  demo.md  download_icons.py  download_mermaid.py  pyproject.toml  render_all.py
examples/: api_sequence.md  auth_flow.md  ci_cd_pipeline.md  class_diagram.md  company_timeline.md  database_schema.md  git_workflow.md  microservices.md  order_states.md  project_roadmap.md  system_overview.md  tech_stack_pie.md  user_journey.md
src/: diagram_router.py  markdown_parser.py  server.py
src/renderers/: architecture_renderer.py  mermaid_renderer.py  mindmap_renderer.py
src/utils/: auto_analyzer.py  color_palette.py  export.py  icon_registry.py
tests/: test_all.py
