[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vizdown-mcp"
version = "0.1.0"
description = "MCP server that converts Markdown files into beautiful diagrams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "playwright",
    "cairosvg",
    "Pillow",
]

[project.scripts]
vizdown-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
